fix for page number padding making page too big

--- a/Styles/main_styles.css
+++ b/Styles/main_styles.css
@@ -62,6 +62,7 @@ p {
     font-weight: bold;
     color: white;
     padding-top: 3px;
+    padding-bottom: 0px;
 }
 .commentbox p{
     padding-top:2px;
